--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-sensors": "^11.3.0",
+    "expo-shake": "^1.0.0-alpha.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
