--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
-    "expo-sensors": "^11.3.0",
-    "expo-shake": "^1.0.0-alpha.1",
+    "expo-av": "^11.2.3",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-sound": "^0.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
