--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "expo": "~45.0.0",
     "expo-av": "^11.2.3",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-paper": "^4.12.1",
     "react-native-sound": "^0.11.2"
   },
   "devDependencies": {
